part1/to-do-v2/manifests/to-do-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-frontend-svc
  namespace: project
spec:
  selector:
    app: to-do-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
