part1/to-do-v2/manifests/to-do-postgres-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: to-do-postgres-svc
spec:
  clusterIP: None
  selector:
    app: to-do-postgres-svc
  ports:
    - port: 5432
      name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: to-do-postgres
spec:
  serviceName: to-do-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: to-do-postgres
  template:
    metadata:
      labels:
        app: to-do-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser", "-d", "tododb"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: initdb
          configMap:
            name: postgres-init
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
