part1/to-do-v2/manifests/gc-kubehelvetti-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gc-kubehelvetti-httproute
  namespace: default
spec:
  parentRefs:
    - name: gc-kubehelvetti-gw
      namespace: default
  rules:
    # ping-pong at /pingpong
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ping-pong-svc
          namespace: exercises
          port: 80

    # to-do-frontend at /todo (must come before catch-all /)
    - matches:
        - path:
            type: PathPrefix
            value: /todo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: to-do-frontend-svc
          namespace: project
          port: 80

    # log-output at / (catch-all - must be last)
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          namespace: exercises
          port: 80
