part1/to-do-v2/manifests/to-do-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: to-do-ingress
  namespace: project
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: to-do-frontend-svc
                port:
                  number: 2345
